--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kick-off",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.7",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@tamagui/config": "^1.90.2",
+    "@tamagui/core": "^1.90.2",
+    "@tamagui/linear-gradient": "^1.90.2",
+    "date-fns": "^2.30.0",
     "expo": "~50.0.7",
+    "expo-constants": "~15.4.5",
+    "expo-font": "~11.10.3",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-redux": "^9.1.0",
+    "tamagui": "^1.90.2",
+    "expo-blur": "~12.9.2",
+    "@shopify/flash-list": "1.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
