--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "test": "jest",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.6.7",
     "@reduxjs/toolkit": "^2.2.1",
+    "@shopify/flash-list": "1.6.3",
     "@tamagui/config": "^1.90.2",
     "@tamagui/core": "^1.90.2",
     "@tamagui/linear-gradient": "^1.90.2",
     "date-fns": "^2.30.0",
     "expo": "~50.0.7",
+    "expo-blur": "~12.9.2",
     "expo-constants": "~15.4.5",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.2",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -30,14 +35,20 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0",
-    "tamagui": "^1.90.2",
-    "expo-blur": "~12.9.2",
-    "@shopify/flash-list": "1.6.3"
+    "tamagui": "^1.90.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
